--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-      <div class="nav">123</div>
-      <div class="left">456</div>
-      <div class="container1">101112</div>
-      <div class="container2">131415</div>
-      <div class="right">789</div>
-      <div class="footer">161718</div>
+      <div class="nav">Div 1</div>
+      <div class="left">Div 2</div>
+      <div class="container1">Div 3</div>
+      <div class="container2">Div 4</div>
+      <div class="right">Div 5</div>
+      <div class="footer">Div 6</div>
 </body>
 
 </html>
