--- a/form.html
+++ b/form.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>Document</title>
     <style>
         * {
@@ -35,7 +39,7 @@
         .Form {
             color: rgba(103, 112, 232, 0.749);
             margin-bottom: 50px;
-            margin-top:25px;
+            margin-top: 25px;
             transition: 2s;
             width: 15%;
         }
@@ -53,16 +57,13 @@
             color: rgba(64, 75, 235, 0.749);
         }
 
-        .cont
-        {
+        .cont {
             margin-top: 50px;
         }
 
-        #Marksheet
-        {
+        #Marksheet {
             margin-bottom: 50px;
         }
-
     </style>
 </head>
 
@@ -70,31 +71,58 @@
     <center>
         <h1 class="Form">FORM</h1>
     </center>
-    <form class="row g-3"  >
+    <form class="row g-3">
 
         <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" required>
+            <label for="inputEmail4"
+                   class="form-label">Email</label>
+            <input type="email"
+                   class="form-control"
+                   id="inputEmail4"
+                   required>
         </div>
         <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" required>
+            <label for="inputPassword4"
+                   class="form-label">Password</label>
+            <input type="password"
+                   class="form-control"
+                   id="inputPassword4"
+                   required>
         </div>
         <div class="col-12">
-            <label for="inputAddress" class="form-label">Address</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
+            <label for="inputAddress"
+                   class="form-label">Address</label>
+            <input type="text"
+                   class="form-control"
+                   id="inputAddress"
+                   placeholder="1234 Main St"
+                   required>
         </div>
         <div class="col-12">
-            <label for="inputAddress2" class="form-label">Address 2</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="Enter Address Here..." required>
+            <label for="inputAddress2"
+                   class="form-label">Address 2</label>
+            <input type="text"
+                   class="form-control"
+                   id="inputAddress2"
+                   placeholder="Enter Address Here..."
+                   required>
         </div>
         <div class="col-md-6">
-            <label for="inputCity" class="form-label">City</label>
-            <input type="text" class="form-control" id="inputCity" required>
+            <label for="inputCity"
+                   class="form-label">City</label>
+            <input type="text"
+                   class="form-control"
+                   id="inputCity"
+                   required>
         </div>
-        <div class="col-md-4" required>
-            <label for="inputState" class="form-label" required>State</label>
-            <select id="inputState" class="form-select" required>
+        <div class="col-md-4"
+             required>
+            <label for="inputState"
+                   class="form-label"
+                   required>State</label>
+            <select id="inputState"
+                    class="form-select"
+                    required>
                 <option selected>Choose...</option>
                 <option>Ahmedabad</option>
                 <option>Mumbai</option>
@@ -103,24 +131,36 @@
             </select>
         </div>
         <div class="col-md-2">
-            <label for="inputZip" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="inputZip" required>
+            <label for="inputZip"
+                   class="form-label">Zip</label>
+            <input type="text"
+                   class="form-control"
+                   id="inputZip"
+                   required>
         </div>
         <div class="col-12">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck" required>
-                <label class="form-check-label" for="gridCheck">
+                <input class="form-check-input"
+                       type="checkbox"
+                       id="gridCheck"
+                       required>
+                <label class="form-check-label"
+                       for="gridCheck">
                     Check me out
                 </label>
             </div>
         </div>
         <div class="col-12">
-            <button type="submit" class="btn btn-primary" required>Sign in</button>
+            <a href="#Marksheet"><button type="submit"
+                        class="btn btn-primary"
+                        required>Sign in</button></a>
+
         </div>
     </form>
     <center>
         <div class="cont">
-            <h1 style="color: rgba(103, 112, 232, 0.749);" id="Marksheet">MARKSHEET</h1>
+            <h1 style="color: rgba(103, 112, 232, 0.749);"
+                id="Marksheet">MARKSHEET</h1>
             <table class="table table-hover">
 
                 <tr>
@@ -203,4 +243,3 @@
 <!-- git add .
 git commit -m "Whatever"
 git push -->
-
